# CommandGenie

./: README.md  install.sh  main.py  prompt.py  pyproject.toml
commandgenie/: context_manager.py  main.py  model.py
