[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commandgenie"
version = "0.1.0"
description = "自然文からUnixコマンドを生成するCLIアシスタント"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-cpp-python>=0.3.8",
    "typer>=0.15.3",
]

[tool.setuptools]
packages = ["commandgenie"]

[project.scripts]
commandgenie = "commandgenie.main:cli"